and the war was lost for want of a missing period

--- a/choose.html
+++ b/choose.html
@@ -9,17 +9,19 @@
 
   <body>
     <div class="cardContainer">
-      <div class="card cardSelect">
+      <div class="card cardSelect" onclick="setCharacter('yoda')">
         <img src="./assets/Char1.png" alt="" />
         <div class="cardSelect cardText">
           <span class="card-title">Yoda</span>
         </div>
       </div>
-      <div class="card cardSelect">
+      <div class="card cardSelect" onclick="setCharacter('Luke Skywalker')">
         <img src="./assets/Char2.png" alt="" />
-        <div class="cardSelect cardText">Test</div>
+        <div class="cardSelect cardText">
+          <span class="card-title">Luke Skywalker</span>
+        </div>
       </div>
-      <div class="card cardSelect">
+      <div class="card cardSelect" onclick="setCharacter('R2D2')">
         <img src="./assets/Char3.png" alt="" />
         <div class="cardSelect cardText">
           <span class="card-title">R2D2</span>
@@ -33,7 +35,7 @@
         <img src="./assets/Char5.png" alt="" />
         <div class="cardSelect cardText">Test</div>
       </div>
-      <div class="card cardSelect" onclick="setCharacter(Andrew)">
+      <div class="card cardSelect" onclick="setCharacter('Princess Leia')">
         <img src="./assets/Char6.png" alt="" />
         <div class="cardSelect cardText">Test</div>
       </div>
