--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="App.css" />
     <title>Unit Four</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container container-main">
-        <div class="btn btn-primary btn-play"><a href="/choose.html">Play</a></div>
+      <div class="btn btn-primary btn-play">
+        <a href="./choose.html">Play</a>
+      </div>
     </div>
 
-
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
