beginning play state

--- a/choose.html
+++ b/choose.html
@@ -29,15 +29,21 @@
       </div>
       <div class="card cardSelect">
         <img src="./assets/Char4.png" alt="" />
-        <div class="cardSelect cardText">Test</div>
+        <div class="cardSelect cardText">
+          <span class="card-title">Princess Leia</span>
+        </div>
       </div>
-      <div class="card cardSelect">
+      <div class="card cardSelect" onclick="setCharacter('Darth Vader')">
         <img src="./assets/Char5.png" alt="" />
-        <div class="cardSelect cardText">Test</div>
+        <div class="cardSelect cardText">
+          <span class="card-title">Darth Vader</span>
+        </div>
       </div>
       <div class="card cardSelect" onclick="setCharacter('Princess Leia')">
         <img src="./assets/Char6.png" alt="" />
-        <div class="cardSelect cardText">Test</div>
+        <div class="cardSelect cardText">
+          <span class="card-title">Princess Leia</span>
+        </div>
       </div>
     </div>
     <script src="./node_modules/jquery/dist/jquery.js"></script>
