--- a/choose.html
+++ b/choose.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Unit Four</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="cardContainer">
-      <div class="card cardSelect" onclick="setCharacter('yoda')">
-        <img src="./assets/Char1.png" alt="" />
-        <div class="cardSelect cardText">
-          <span class="card-title">Yoda</span>
+        <div class="card cardSelect" onclick="setCharacter('yoda')">
+            <img src="./assets/Char1.png" alt="" />
+            <div class="cardSelect cardText">
+                <span class="card-title">Yoda</span>
+                <span id="YodaPoints" class="points"></span>
+            </div>
         </div>
-      </div>
-      <div class="card cardSelect" onclick="setCharacter('Luke Skywalker')">
-        <img src="./assets/Char2.png" alt="" />
-        <div class="cardSelect cardText">
-          <span class="card-title">Luke Skywalker</span>
+        <div class="card cardSelect" onclick="setCharacter('Luke Skywalker')">
+            <img src="./assets/Char2.png" alt="" />
+            <div class="cardSelect cardText">
+                <span class="card-title">Luke Skywalker</span>
+                <span id="LukePoints" class="points"></span>
+            </div>
         </div>
-      </div>
-      <div class="card cardSelect" onclick="setCharacter('R2D2')">
-        <img src="./assets/Char3.png" alt="" />
-        <div class="cardSelect cardText">
-          <span class="card-title">R2D2</span>
+        <div class="card cardSelect" onclick="setCharacter('R2D2')">
+            <img src="./assets/Char3.png" alt="" />
+            <div class="cardSelect cardText">
+                <span class="card-title">R2D2</span>
+                <span id="R2D2Points" class="points"></span>
+            </div>
         </div>
-      </div>
-      <div class="card cardSelect">
-        <img src="./assets/Char4.png" alt="" />
-        <div class="cardSelect cardText">
-          <span class="card-title">Princess Leia</span>
+        <div class="card cardSelect" onclick="setCharacter('Hans Solo')">
+            <img src="./assets/Char4.png" alt="" />
+            <div class="cardSelect cardText">
+                <span class="card-title">Hans Solo</span>
+                <span id="HansPoints" class="points"></span>
+            </div>
         </div>
-      </div>
-      <div class="card cardSelect" onclick="setCharacter('Darth Vader')">
-        <img src="./assets/Char5.png" alt="" />
-        <div class="cardSelect cardText">
-          <span class="card-title">Darth Vader</span>
+        <div class="card cardSelect" onclick="setCharacter('Darth Vader')">
+            <img src="./assets/Char5.png" alt="" />
+            <div class="cardSelect cardText">
+                <span class="card-title">Darth Vader</span>
+                <span id="DarthPoints" class="points"></span>
+            </div>
         </div>
-      </div>
-      <div class="card cardSelect" onclick="setCharacter('Princess Leia')">
-        <img src="./assets/Char6.png" alt="" />
-        <div class="cardSelect cardText">
-          <span class="card-title">Princess Leia</span>
+        <div class="card cardSelect" onclick="setCharacter('Princess Leia')">
+            <img src="./assets/Char6.png" alt="" />
+            <div class="cardSelect cardText">
+                <span class="card-title">Princess Leia</span>
+                <span id="LeiaPoints" class="points"></span>
+            </div>
         </div>
-      </div>
     </div>
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="index.js"></script>
-  </body>
+</body>
+
 </html>
