--- a/play.html
+++ b/play.html
@@ -1,57 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Unit Four</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Play Goes Here</h1>
     <div class="container playContainer">
-        <div class="card cardSelect cardPlayPage">
-            <img alt="" id="playerSelected" />
-            <div class="cardSelect cardText ">
-                <span class="card-title" id="playerTitle"></span>
-                <div class="textholder">
-                    Health Points:
-                    <span id="playerPoints"></span>
-                </div>
-                <div class="textholder">
-                    Attack:
-                    <span id="playerAttackPower"></span>
-                </div>
-                <div class="textholder">
-                    Counter Attack:
-                    <span id="playerCounterAttack"></span>
-                </div>
-            </div>
+      <div class="card cardSelect cardPlayPage">
+        <img alt="" id="playerSelected" />
+        <div class="cardSelect cardText ">
+          <span class="card-title" id="playerTitle"></span>
+          <div class="textholder">
+            Health Points:
+            <span id="playerPoints"></span>
+          </div>
+          <div class="textholder">
+            Attack:
+            <span id="playerAttackPower"></span>
+          </div>
+          <div class="textholder">
+            Counter Attack:
+            <span id="playerCounterAttack"></span>
+          </div>
         </div>
-        <div class="card cardSelect cardOpponent">
-            <img alt="" id="opponentCard0" />
+      </div>
+      <div class="card cardSelect cardOpponent" id="cardOp0" onclick="setBattle('0')"  >
+        <img alt="" id="opponentCard0" />
+        <div class="cardSelect cardText ">
+          <span class="card-title" id="opponentTitle0"></span>
+          <div class="textholder">
+            Health Points:
+            <span id="opponentPoints0"></span>
+          </div>
+          <!-- <div class="textholder">
+            Attack:
+            <span id="opponentAttackPower0"></span>
+          </div> -->
+          <!-- <div class="textholder">
+            Counter Attack:
+            <!-- <span id="opponentCounterAttack0"></span> -->
+          </div> 
+        </div>
+        <div class="card cardSelect cardOpponent" id="cardOp1" onclick="setBattle('1')">
+            <img alt="" id="opponentCard1" />
             <div class="cardSelect cardText ">
-                <span class="card-title" id="opponentTitle0"></span>
-                <div class="textholder">
+              <span class="card-title" id="opponentTitle1"></span>
+              <div class="textholder">
+                Health Points:
+                <span id="opponentPoints1"></span>
+              </div>
+              <!-- <div class="textholder">
+                Attack:
+                <span id="opponentAttackPower0"></span>
+              </div> -->
+              <!-- <div class="textholder">
+                Counter Attack:
+                <!-- <span id="opponentCounterAttack0"></span> -->
+              </div> 
+            </div>
+            <div class="card cardSelect cardOpponent" id="cardOp2" onclick="setBattle('2')">
+                <img alt="" id="opponentCard2" />
+                <div class="cardSelect cardText ">
+                  <span class="card-title" id="opponentTitle2"></span>
+                  <div class="textholder">
                     Health Points:
-                    <span id="opponentPoints0"></span>
-                </div>
-                <div class="textholder">
+                    <span id="opponentPoints2"></span>
+                  </div>
+                  <!-- <div class="textholder">
                     Attack:
                     <span id="opponentAttackPower0"></span>
-                </div>
-                <div class="textholder">
+                  </div> -->
+                  <!-- <div class="textholder">
                     Counter Attack:
-                    <span id="opponentCounterAttack0"></span>
+                    <!-- <span id="opponentCounterAttack0"></span> -->
+                  </div> 
                 </div>
-            </div>
-        </div>
-
+      </div>
     </div>
 
 
     <script src="./index.js"></script>
-</body>
-
+  </body>
 </html>
