ahhh that period again

--- a/play.html
+++ b/play.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>Play Goes Here</h1>
-    <div class="container playContainer">
+    <div class="playContainer">
       <div class="card cardSelect cardPlayPage">
         <img alt="" id="playerSelected" />
         <div class="cardSelect cardText ">
@@ -28,6 +28,7 @@
           </div>
         </div>
       </div>
+      <div class="RandomGridSpaceMaker"></div>
       <div class="card cardSelect cardOpponent" id="cardOp0" onclick="setBattle('0')"  >
         <img alt="" id="opponentCard0" />
         <div class="cardSelect cardText ">
