--- a/play.html
+++ b/play.html
@@ -1,89 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>Unit Four</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <h1>Play Goes Here</h1>
     <div class="playContainer">
-      <div class="card cardSelect cardPlayPage">
-        <img alt="" id="playerSelected" />
-        <div class="cardSelect cardText ">
-          <span class="card-title" id="playerTitle"></span>
-          <div class="textholder">
-            Health Points:
-            <span id="playerPoints"></span>
-          </div>
-          <div class="textholder">
-            Attack:
-            <span id="playerAttackPower"></span>
-          </div>
-          <div class="textholder">
-            Counter Attack:
-            <span id="playerCounterAttack"></span>
-          </div>
+        <div class="card cardSelect cardPlayPage">
+            <img alt="" id="playerSelected" />
+            <div class="cardSelect cardText ">
+                <span class="card-title" id="playerTitle"></span>
+                <div class="textholder">
+                    Health Points:
+                    <span id="playerPoints"></span>
+                </div>
+                <div class="textholder">
+                    Attack:
+                    <span id="playerAttackPower"></span>
+                </div>
+                <div class="textholder">
+                    Counter Attack:
+                    <span id="playerCounterAttack"></span>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="RandomGridSpaceMaker"></div>
-      <div class="card cardSelect cardOpponent" id="cardOp0" onclick="setBattle('0')"  >
-        <img alt="" id="opponentCard0" />
-        <div class="cardSelect cardText ">
-          <span class="card-title" id="opponentTitle0"></span>
-          <div class="textholder">
-            Health Points:
-            <span id="opponentPoints0"></span>
-          </div>
-          <!-- <div class="textholder">
+        <div class="RandomGridSpaceMaker"></div>
+        <div class="card cardSelect cardOpponent" id="cardOp0" onclick="setBattle('0')">
+            <img alt="" id="opponentCard0" />
+            <div class="cardSelect cardText ">
+                <span class="card-title" id="opponentTitle0"></span>
+                <div class="textholder">
+                    Health Points:
+                    <span id="opponentPoints0"></span>
+                </div>
+                <!-- <div class="textholder">
             Attack:
             <span id="opponentAttackPower0"></span>
           </div> -->
-          <!-- <div class="textholder">
+                <!-- <div class="textholder">
             Counter Attack:
             <!-- <span id="opponentCounterAttack0"></span> -->
-          </div> 
+            </div>
         </div>
         <div class="card cardSelect cardOpponent" id="cardOp1" onclick="setBattle('1')">
             <img alt="" id="opponentCard1" />
             <div class="cardSelect cardText ">
-              <span class="card-title" id="opponentTitle1"></span>
-              <div class="textholder">
-                Health Points:
-                <span id="opponentPoints1"></span>
-              </div>
-              <!-- <div class="textholder">
+                <span class="card-title" id="opponentTitle1"></span>
+                <div class="textholder">
+                    Health Points:
+                    <span id="opponentPoints1"></span>
+                </div>
+                <!-- <div class="textholder">
                 Attack:
                 <span id="opponentAttackPower0"></span>
               </div> -->
-              <!-- <div class="textholder">
+                <!-- <div class="textholder">
                 Counter Attack:
                 <!-- <span id="opponentCounterAttack0"></span> -->
-              </div> 
             </div>
-            <div class="card cardSelect cardOpponent" id="cardOp2" onclick="setBattle('2')">
-                <img alt="" id="opponentCard2" />
-                <div class="cardSelect cardText ">
-                  <span class="card-title" id="opponentTitle2"></span>
-                  <div class="textholder">
+        </div>
+        <div class="card cardSelect cardOpponent" id="cardOp2" onclick="setBattle('2')">
+            <img alt="" id="opponentCard2" />
+            <div class="cardSelect cardText ">
+                <span class="card-title" id="opponentTitle2"></span>
+                <div class="textholder">
                     Health Points:
                     <span id="opponentPoints2"></span>
-                  </div>
-                  <!-- <div class="textholder">
+                </div>
+                <!-- <div class="textholder">
                     Attack:
                     <span id="opponentAttackPower0"></span>
                   </div> -->
-                  <!-- <div class="textholder">
+                <!-- <div class="textholder">
                     Counter Attack:
                     <!-- <span id="opponentCounterAttack0"></span> -->
-                  </div> 
-                </div>
-      </div>
+            </div>
+        </div>
+    </div>
+    <div class="buttonContainer">
+        <button type="button" class="btn btn-primary btn-lg btn-block hide" id="fightButton">Fight</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block hide" id="chooseAnother">Choose Another</button>
+    </div>
     </div>
 
 
     <script src="./index.js"></script>
-  </body>
+</body>
+
 </html>
