working up through counter attack

--- a/play.html
+++ b/play.html
@@ -87,6 +87,7 @@
     <div class="buttonContainer">
         <button type="button" class="btn btn-primary btn-lg btn-block hide" id="fightButton">Fight</button>
         <button type="button" class="btn btn-primary btn-lg btn-block hide" id="chooseAnother">Choose Another</button>
+        <button type="button" class="btn btn-danger btn-lg btn-block bg-danger" id="resetGame">Reset</button>
     </div>
     </div>
 
