With the numbers as they are set now it's impossible to win, but it works. I'll adjust those numbers today.

--- a/play.html
+++ b/play.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Play Goes Here</h1>
+    <h1 id="welcomeText">Welcome <span id="welcomeName"></span></h1>
     <div class="playContainer">
         <div class="card cardSelect cardPlayPage">
             <img alt="" id="playerSelected" />
@@ -89,9 +89,15 @@
         <button type="button" class="btn btn-primary btn-lg btn-block hide" id="chooseAnother">Choose Another</button>
         <button type="button" class="btn btn-danger btn-lg btn-block bg-danger" id="resetGame">Reset</button>
     </div>
+
+
+
     </div>
 
 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="./index.js"></script>
 </body>
 
